--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,49 @@
+@font-face {
+  font-family: "Raleway";
+  src: url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff)
+      format("woff"),
+    url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff2)
+      format("woff2");
+  font-weight: 700;
+  font-size: normal;
+  font-display: swap;
+}
+:root {
+  --main-text-cl: #555555;
+  --title-cl: #303030;
+  --accent-cl: #ff6c00;
+  --alt-bg-text: #9da4bd;
+  --alt-title-cl: #ffffff;
+
+  --dark-bg: #191c26;
+  --second-bg: #f7f7f7;
+
+  --main-font: "Open-sans", sans-serif;
+  --title-font: "Raleway", sans-serif;
+}
+
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--main-text-cl);
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.link:hover,
+.link:focus {
+  color: var(--accent-cl);
+}
+
+.list {
+  list-style: none;
+}
+
+.address {
+  font-style: inherit;
 }
