--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "Raleway";
-  src: url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff)
-      format("woff"),
-    url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff2)
-      format("woff2");
+  src: url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff),
+    format("woff"),
+    url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff2),
+    format("woff2");
   font-weight: 700;
   font-size: normal;
   font-display: swap;
