change in section OUR MASTERS

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,4 @@
-@font-face {
+.modern @font-face {
   font-family: "Raleway";
   src: url(../fonts/raleway-v19-latin-cyrilic/alegreya-v19-latin_cyrillic-700.woff),
     format("woff"),
@@ -12,7 +12,7 @@
   --main-text-cl: #555555;
   --title-cl: #303030;
   --accent-cl: #ff6c00;
-  --alt-bg-text: #9da4bd;
+  --alt-text-cl: #9da4bd;
   --alt-title-cl: #ffffff;
 
   --dark-bg: #191c26;
@@ -22,12 +22,39 @@
   --title-font: "Raleway", sans-serif;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: var(--main-font);
   font-size: 18px;
   line-height: 1.67;
   letter-spacing: 0.02em;
   color: var(--main-text-cl);
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.suptitle {
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .visually-hidden {
@@ -59,6 +86,10 @@ body {
   font-style: inherit;
 }
 
+.logo {
+  margin-right: 70px;
+}
+
 .btn {
   font-weight: 600;
   font-size: 12px;
@@ -67,6 +98,7 @@ body {
   text-transform: uppercase;
   color: var(--title-cl);
   background-color: transparent;
+  cursor: pointer;
 }
 
 .btn:hover,
@@ -90,35 +122,6 @@ body {
   line-height: 1.18;
 }
 
-.section-title {
-  font-size: 42px;
-  line-height: 1.17;
-}
-
-.title-label {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  color: (--title-cl);
-}
-
-.team-item {
-  text-align: center;
-}
-.team-item-name {
-  font-weight: 400;
-  line-height: 1.39;
-  color: var(--title-cl);
-}
-
-.team-item-position {
-  font-size: 14px;
-  line-height: 1.36;
-  color: var(--accent-cl);
-}
-
 .dark-bg {
   background-color: var(--dark-bg);
   color: var(--alt-text-cl);
@@ -131,4 +134,123 @@ body {
 
 .dark-bg .title-label {
   color: var(--alt-text-cl);
+}
+
+/* HEADER */
+
+.page-header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 70px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+.menu-item:not(:last child) {
+  margin-right: 40px;
+}
+
+.link {
+  margin-right: 70px;
+}
+
+/* COMPONENTS */
+
+.btn-link {
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
+  background-color: transparent;
+  padding: 12px 20px;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.btn-link:hover,
+.btn-link:focus {
+  background-color: var(--accent-cl);
+  color: #ffffff;
+}
+
+/* OUR MASTERS */
+
+.masters {
+  background-color: var(--second-bg);
+}
+
+.masters-title {
+  margin-bottom: 44px;
+}
+
+.masters-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+  /* justify-content: space-between; */
+}
+
+.masters-list-item {
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.title-label {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: (--title-cl);
+}
+
+.section-title {
+  font-size: 42px;
+  line-height: 1.17;
+}
+
+.team-item {
+  text-align: center;
+}
+.team-item-name {
+  font-weight: 400;
+  line-height: 1.39;
+  color: var(--title-cl);
+}
+
+.masters-list-position {
+  font-size: 14px;
+  line-height: 1.36;
+  color: var(--accent-cl);
+}
+
+.container {
+  width: 1280px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.section {
+  padding-top: 130px;
+  padding-right: 130px;
 }
